# rnbo-preset-issues

./: .gitignore  .gitmodules  CMakeLists.txt
export/: description.json  presets.json  rnbo_source.cpp
export/rnbo/: version.cmake
export/rnbo/common/: RNBO_Version.h
max/: gain.maxpat
src/: GainAudioProcessor.cpp  GainAudioProcessor.h
test/: TestProcessorPresets.cpp
